# url

./: .appveyor.yml  .azure-pipelines.yml  .drone.star  .drone.star.swp  .gitignore  .travis.yml  CMakeLists.txt  Jamfile  README.adoc  README.md  build.jam
.drone/: 8e79f99584-02f3f58ec1.sh  8e79f99584-db307a86da.sh  boost.sh  codecov-script.sh  coverity-script.sh  drone.bat  drone.sh  fc4716b68c-0fcaf592f9.sh  fc4716b68c-cce9827eb5.sh  fc4716b68c-db180b7bd2.sh  install1-script.sh  standalone-script.sh  valgrind-script.sh
antora/: .gitignore
doc/: .gitignore  AuthorityDiagram.odg  HelpCard.odg  Jamfile  MidwitMeme.odg  PartsDiagram.odg  README.md  antora.yml  build_antora.sh  generate-files.mjs  index.html  javadoc.hpp  library-detail.adoc  local-playbook.yml  mrdocs.yml  package-lock.json  package.json  source.dox
example/: CMakeLists.txt  Jamfile  quicklook.cpp  snippets.cpp
example/const_string/: CMakeLists.txt  Jamfile  dir_router.cpp  path.cpp  query.cpp  route.cpp  router.cpp
example/magnet/: CMakeLists.txt  Jamfile  filtered_view.hpp  magnet.cpp
example/mailto/: Jamfile  mailto.cpp  mailto_grammar.hpp  rfc.hpp
example/query/: CMakeLists.txt  Jamfile  query.cpp
example/route/: CMakeLists.txt  Jamfile  route.cpp
example/router/: CMakeLists.txt  Jamfile  matches.hpp  matches_storage.hpp  router.cpp  router.hpp  router_test.cpp  src.hpp
example/router/detail/: matches_storage.hpp  router.hpp
example/router/detail/impl/: matches_storage.ipp  router.cpp  router.ipp
example/router/impl/: matches.ipp  router.hpp  router.ipp
example/sanitize/: sanitize.cpp
extra/: test_main.cpp  test_suite.hpp
meta/: explicit-failures-markup.xml  libraries.json
src/: authority_view.cpp  decode_view.cpp  error.cpp  ipv4_address.cpp  ipv6_address.cpp  params_base.cpp  params_encoded_ref.cpp  params_encoded_view.cpp  params_ref.cpp  parse_path.cpp  (+12 more)
test/: CMakeLists.txt  Jamfile  _detail_char_type.cpp  _detail_parse.cpp  _detail_parser.cpp  basic_url.cpp  basic_value.cpp  error.cpp  host_type.cpp  indexed_string.cpp  ipv4_address.cpp  ipv6_address.cpp  main.cpp  optional.cpp  params.cpp  path_view.cpp  pct_encoding.cpp  query_params_view.cpp  sandbox.cpp  scheme.cpp  segments.cpp  static_pool.cpp  static_url.cpp  static_value.cpp  storage_ptr.cpp  string.cpp  uri.cpp  url.cpp  url_base.cpp  url_view.cpp  urls.cpp  value.cpp  view.cpp
test/bnf/: algorithm.cpp  arrow_proxy.cpp  ascii.cpp  char_set.cpp  char_sets.cpp  element.cpp  ip_v4address.cpp  origin_form.cpp  path_abempty.cpp  path_absolute.cpp  path_noscheme.cpp  path_rootless.cpp  pchar.cpp  pct_encoded.cpp  scheme.cpp  segment.cpp  sequence.cpp  test_bnf.hpp  token.cpp  tuple.cpp  type_traits.cpp  userinfo.cpp
test/cmake_install_test/: CMakeLists.txt  main.cpp
test/cmake_test/: CMakeLists.txt
test/extra/: CMakeLists.txt  Jamfile  test_suite.cpp
test/fuzz/: CMakeLists.txt  fuzz_parse.cpp
test/include/: main.cpp  test_bnf.hpp  test_suite.hpp
test/limits/: CMakeLists.txt  Jamfile  limits.cpp
test/rfc/: absolute_uri_bnf.cpp  authority.cpp  authority_bnf.cpp  char_sets.cpp  fragment.cpp  fragment_bnf.cpp  fragment_part.cpp  hexdig.cpp  hier_part.cpp  hier_part_bnf.cpp  host.cpp  host_bnf.cpp  ip_literal.cpp  ip_literal_bnf.cpp  ip_v4address.cpp  ipv4_address.cpp  ipv4_address_bnf.cpp  ipv6_address.cpp  ipv6_address_bnf.cpp  ipv_future.cpp  ipv_future_bnf.cpp  origin_form.cpp  path.cpp  path_abempty.cpp  path_absolute.cpp  path_noscheme.cpp  path_rootless.cpp  pchar.cpp  pct_encoded.cpp  pct_encoded_bnf.cpp  pct_encoded_str.cpp  pct_encoding.cpp  port.cpp  port_bnf.cpp  port_part_bnf.cpp  query.cpp  query_bnf.cpp  query_part.cpp  query_part_bnf.cpp  relative_part.cpp  (+10 more)
test/unit/: CMakeLists.txt  Jamfile  any_allocator.cpp  authority_view.cpp  bnf.cpp  const_string.cpp  decode.cpp  decode_view.cpp  doc_3_urls.cpp  doc_container.cpp  doc_grammar.cpp  encode.cpp  encoded_segments_view.cpp  error.cpp  error_code.cpp  error_type.cpp  error_types.cpp  format.cpp  grammar.cpp  host_type.cpp  ignore_case.cpp  ipv4_address.cpp  ipv6_address.cpp  limits.cpp  natvis.cpp  optional.cpp  param.cpp  params.cpp  params_base.cpp  params_const_encoded_view.cpp  params_const_view.cpp  params_encoded.cpp  params_encoded_base.cpp  params_encoded_const_view.cpp  params_encoded_ref.cpp  params_encoded_view.cpp  params_ref.cpp  params_value_type.cpp  params_view.cpp  parse.cpp  (+41 more)
test/unit/bnf/: ascii.cpp  char_set.cpp  charset.cpp  error.cpp  lut_chars.cpp  parse.cpp  range.cpp  repeat.cpp  token.cpp
test/unit/compat/: ada.cpp
test/unit/example/router/: router.cpp
test/unit/experimental/: router.cpp
test/unit/grammar/: all_chars.cpp  alnum_chars.cpp  alpha_chars.cpp  ascii.cpp  char_literal.cpp  char_rule.cpp  charset.cpp  ci_string.cpp  copied_strings.cpp  dec_octet_rule.cpp  delim_rule.cpp  digit_chars.cpp  elements.cpp  error.cpp  grammar_error.cpp  hexdig_chars.cpp  literal_rule.cpp  lut_chars.cpp  not_empty_rule.cpp  optional.cpp  optional_rule.cpp  parse.cpp  parse_tag.cpp  range.cpp  range_rule.cpp  recycled.cpp  sequence_rule.cpp  string_token.cpp  string_view_base.cpp  token.cpp  token_rule.cpp  tuple_rule.cpp  type_traits.cpp  unsigned_dec_rule.cpp  unsigned_decimal.cpp  unsigned_rule.cpp  variant_rule.cpp  vchars.cpp
test/unit/rfc/: absolute_uri_bnf.cpp  absolute_uri_rule.cpp  authority_bnf.cpp  authority_rule.cpp  char_sets.cpp  charsets.cpp  encoded_rule.cpp  fragment_bnf.cpp  fragment_part_bnf.cpp  fragment_rule.cpp  gen_delim_chars.cpp  h16_rule.cpp  hier_part_bnf.cpp  hier_part_rule.cpp  host_bnf.cpp  host_rule.cpp  ip_literal_bnf.cpp  ip_literal_rule.cpp  ipv4_address_bnf.cpp  ipv4_address_rule.cpp  ipv6_address_bnf.cpp  ipv6_address_rule.cpp  ipv_future_bnf.cpp  ipv_future_rule.cpp  origin_form_rule.cpp  path_rules.cpp  paths_bnf.cpp  paths_rule.cpp  pchars.cpp  pct_encoded_bnf.cpp  pct_encoded_rule.cpp  port_bnf.cpp  port_rule.cpp  query_bnf.cpp  query_params_bnf.cpp  query_rule.cpp  reg_name_bnf.cpp  reg_name_rule.cpp  relative_part_bnf.cpp  relative_part_rule.cpp  (+13 more)
test/wpt/: CMakeLists.txt  main.cpp
(+2116 files in other folders)
